[package]
name = "testlog"
version = "0.1.3"
edition = "2021"
authors = ["Josh Vander Hook <josh@vanderhook.info>"]
description = "A tiny macro for test-only stderr logging that activates only for the current crate"
readme = "README.md"
repository = "https://github.com/jodavaho/testlog"
license = "MIT OR Apache-2.0"
keywords = ["testing", "debug", "logging", "macro", "stderr"]
categories = ["development-tools::testing", "development-tools::debugging"]
exclude = [
    ".gitignore",
    "/.git",
]

[dependencies]
